# scientific-computing-examples

./: .gitignore  .gitmodules  README.md
ADAS/: 1_buckets.sh  2_pubsub.sh  3_gcs_notifications.sh  4_cloud_func.sh  5_config.sh  6_deploy.sh  README.md  sql_list_labels.txt  sql_videos_for_label.txt
PINN/: Physics_Informed_Neural_Networks.ipynb  run.py
VertexAI/: junk.ipynb  pipeline.py
ai-infrastructure/: README.md  fine-tune.py  hpc-slurm-llama2.yaml  llama2.yml  ml-cluster.yaml
apptainer/: README.md
cloud-batch-python/: requirements.txt
cloud-batch-python/python-batch/: Dockerfile  README.md  a2_gpu.yaml  batch.py  build-CUBLAS.yaml  build.yaml  container.yaml  cpu_fftw.yaml  create_job.py  create_template.sh  cuquantum-bp.yaml  cuquantum-noise.yaml  cuquantum-template.yaml  cuquantum.yaml  deepvariant.sh  deepvariant.yaml  hello_world.yaml  main.py  nvidia-smi-container.yaml  pyproject.toml  requirements.txt  run_batchCUBLAS.yaml  run_matrixMulCUBLAS.yaml  shell_with_gcsfuse.yaml  simple-container.yaml  v100-gpu.yaml
cloud-batch-python/python-batch/src/: create_container_job.py  create_job.py  delete_job.py  list_jobs.py  parse_yaml.py
cloud-batch-python/python-batch/src/google_cloud_pybatch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cloud-batch-python/python-batch/src_tbdeleted/: create_job.py  parse_yaml.py
custom-workbench-images/: README.md
custom-workbenches/: .gitignore  README.md  envrc.example  example-build-custom-workbench-vm-image.md  example-build-custom-workbench.md  example-simple-workbench.md
(+493 files in other folders)
