[build-system]
requires = ["setuptools>=61.0", "google-cloud-batch>=0.4.0", "absl-py>=1.3.0", "google-api-core>=2.10.2"]
build-backend = "setuptools.build_meta"
[project]
name = "google_cloud_pybatch"
version = "0.0.1"
authors = [
  { name="J. Ross Thomson", email="jrossthomson@google.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"